using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class StaticValue
{
    public static string ANIM_TRIGGER_IDLE = "isIdle";
    public static string ANIM_TRIGGER_IDLE_HOLD = "isIdleHold";
    public static string ANIM_TRIGGER_WALK = "isWalk";
    public static string ANIM_TRIGGER_WALK_HOLD = "isWalkHold";
    public static string ANIM_TRIGGER_SIT = "isSit";
    public static string ANIM_TRIGGER_EAT = "isEat";
    public static string ANIM_TRIGGER_COOK = "isCook";

    public static string CHARACTER_NAME_TAG = "Player";
    public static string OBSTACLE_NAME_TAG = "Obstacle";
    public static string LOCATION_NAME_TAG = "Location";

    public static Vector3 vCompare = new Vector3(100, 100, 100);
}
